# thisfieldwas.green

./: .drone.yml  .gitignore  .gitmodules  404.md  Brewfile  Brewfile.lock.json  CNAME  Makefile  README.md  about-me.html  about-me.md  atom.xml  base.sh  broken-links.cfg  build  commands.sh  config.ini  config.yaml  contact.md  go  green-site.cabal  green.cabal  hie.yaml  index.html  index.md  logans-blog.cabal  logans-site.cabal  make_favicon  package.yaml  publish  rebuild  resume.md  robots.txt  rss.xml  site.hs  sitemap.xml  stack.yaml  ⚡
404/: index.html
500/: index.html
app/author/: Main.hs
app/green/: Main.hs
app/site/: Main.hs
archives/: index.html
blog/: 2012-11-07-using-perforce-chronicle-for-application-configuration.md  2012-11-16-scm-backed-application-configuration-with-perforce.md  2012-11-20-app-config-app-in-action.md  2012-11-28-promoting-changes-with-app-config-app.md  2013-06-16-sterling-benchmarks.md  2013-06-17-sterling-with-memoization.md  2013-08-05-lessons-from-sterling.md  index.html
blog/archives/: index.html
blog/drafts/: index.html
ci/: pipeline.yaml  pipeline.yml
ci/base-site/: Dockerfile
ci/prebake-site/: Dockerfile
ci/prebaked-site/: Dockerfile
ci/site-base-image/: Dockerfile
ci/site-prebaked-image/: Dockerfile
ci/tasks/: build-site.yaml
code/: LICENSE.md
code/app-config/: index.html
contact/: index.html
css/: _code.sass  _default.sass  _media.sass  _theme.sass  _theme.scss  _variables.scss  main.css  main.sass  main.scss
css/components/: _code.sass  _figures.sass  _headers.sass
css/elements/: _asides.scss  _code.scss  _containers.scss  _default.scss  _figures.scss  _headers.scss
css/layout/: _footer.scss  _header.scss  _main.sass  _post.scss
css/media/: _config.sass
css/pages/: _about-me.sass  _about-me.scss  _homepage.scss  homepage.css
css/posts/: embracing-nondeterminism-part-1.css  reasons-why-my-website-is-offline.css  redoing-my-website.css
css/screen-sizes/: _huge-format.sass  _large-format.sass  _medium-format.sass  _small-format.sass
docs/: CNAME
drafts/: index.html
drafts/copilot-as-a-hot-butter-knife/: index.html
drafts/embracing-nondeterminism-part-1/: index.html
drafts/embracing-nondeterminism-part-2/: index.html
drafts/embracing-nondeterminism-part-3/: index.html
drafts/imperative-computation/: index.html
drafts/parser-combinators/: index.html
drafts/reasons-why-my-website-is-offline/: index.html
hs-src/: Context.hs  Js.hs  Route.hs  Site.hs
hs-src/Site/: Compiler.hs  Configuration.hs  Context.hs  Rule.hs  Util.hs
js/: main.js  scroll-shadows.js
layouts/: default.html  post.html  skeleton.html
pages/: 404.md  about-me.md  archives.md  blog.md  contact.md  drafts.md  resume.md
partials/: about-me.html  employment-opportunities.html  employment-opportunities.md  footer.html  image.html  post.html  previous-posts.html  source-changed.html  source-commit.html  source-generated.html  teaser-list.html  youtube.html
privacy-policy/: index.html
resume/: index.html
site/: 404.md  CNAME  archives.html  atom.xml  blog.html  contact.md  drafts.html  index.html  resume.md  robots-preview.txt  robots.txt  rss.xml  sitemap.xml
site-src/: CNAME  index.html  index.md
site-src/css/: _default.sass
site-src/js/: main.js
site-src/posts/: 2012-11-07-using-perforce-chronicle-for-application-configuration.md  2013-06-16-sterling-benchmarks.md  2013-06-17-sterling-with-memoization.md  2013-08-05-lessons-from-sterling.md  2015-01-23-scoping-and-thunking-in-let-declaration.md
site-src/templates/: default.html
site/_drafts/: 2021-12-27-high-availability-for-closet-colocation.md  copilot-as-a-hot-butter-knife.md  embracing-nondeterminism-part-1.md  embracing-nondeterminism-part-2.md  embracing-nondeterminism-part-3.md  imperative-computation.md  lessons-from-sterling.md  morphisms-are-lossy.md  open-source-in-the-age-of-github.md  parser-combinators.md  reasons-why-my-website-is-offline.md  redoing-my-website.md  sterling-benchmarks.md  sterling-with-memoization.md
site/_errors/: 404.md  500.md
site/_layouts/: default.html  from-context.html  from-metadata.html  main-nav.html  page.html  post.html  skeleton.html  wrap-it-up.html
site/_pages/: contact.md
site/_partials/: about-me.html  employment-opportunities.html  employment.html  main-nav.html  page-comments.html  post-comments.html  post-header.html  post-list.html  post-meta.html  post-thumbnail.html  post.html  scroll-shadows.html  teaser-list.html
site/_posts/: 2012-11-07-using-perforce-chronicle-for-application-configuration.md  2012-11-16-scm-backed-application-configuration-with-perforce.md  2012-11-20-app-config-app-in-action.md  2012-11-28-promoting-changes-with-app-config-app.md  2013-06-16-sterling-benchmarks.md  2013-06-17-sterling-with-memoization.md  2013-08-05-lessons-from-sterling.md  2021-12-05-redoing-my-website.md  2021-12-11-reasons-why-my-website-is-offline.md  2022-02-08-persistent-ssh-tunnels.md  2022-02-09-persistent-ssh-tunnels.md  2022-03-15-contexts-and-effects.md  2022-03-15-embracing-nondeterminism-part-1.md  2022-06-05-embracing-nondeterminism-part-2.md  2022-06-05-enabling-control-flow.md  2022-06-05-permitting-or-halting-computation.md  2022-06-16-set-function.md  2022-06-17-imperative-computation.md  2022-09-05-parser-combinators.md  morphisms-are-lossy.md
site/_templates/: code.md  image-figure.html  image.html  link.html  post-header.html  posts-under-category.html  sitemap.xml  youtube.html
site/blog/: archives.html  blog.html  drafts.html  index.html  tag.html
site/css/: _code.sass  _default.sass  _fonts.scss  _index.sass  _theme.sass  _theme.scss  _variables.scss  main.scss
site/js/: main.js  scroll-shadows.js
site/layouts/: default.html  skeleton.html
site/pages/: 404.md  about-me.md  contact.md  index.md  resume.md
site/partials/: employment-opportunities.html  image.html  (+2 more)
src/: Green.hs  GreenSite.hs  Site.hs  main.hs
templates/: default.html  drafts.html  index.html  page.html  post.html  sitemap.xml  skeleton.html  teaser-list.html  youtube.html
(+305 files in other folders)
