name:               logans-blog
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          main.hs
  hs-source-dirs:   .
                  , hs-src
  other-modules:    Site
                  , Site.Compiler
                  , Site.Configuration
                  , Site.Context
                  , Site.Context.Git
                  , Site.Rule
                  , Site.Rule.Archive
                  , Site.Rule.Feed
                  , Site.Rule.Index
                  , Site.Rule.Js
                  , Site.Rule.Page
                  , Site.Rule.Post
                  , Site.Rule.Robot
                  , Site.Rule.Sass
                  , Site.Rule.Sitemap
                  , Site.Util
  build-depends:    base == 4.*
                  , hakyll == 4.14.*
                  , hjsmin == 0.2.*
                  , language-javascript == 0.7.*
                  , bytestring == 0.*
                  , process == 1.6.*
                  , filepath == 1.4.*
                  , directory == 1.3.*
                  , mtl == 2.2.*
  ghc-options:      -threaded
                    -rtsopts
                    -with-rtsopts=-N
                    -Wall
                    -Wcompat
                    -Widentities
                    -Wincomplete-patterns
                    -Wincomplete-record-updates
                    -Wincomplete-uni-patterns
                    -Wmissing-deriving-strategies
                    -Wmissing-home-modules
                    -Wname-shadowing
                    -Wpartial-fields
                    -Wredundant-constraints
                    -Wunused-type-patterns
  default-language: Haskell2010
  default-extensions: BangPatterns
                    , BinaryLiterals
                    , BlockArguments
                    , ConstraintKinds
                    , DataKinds
                    , DefaultSignatures
                    , DeriveDataTypeable
                    , DeriveFoldable
                    , DeriveFunctor
                    , DeriveGeneric
                    , DeriveTraversable
                    , DerivingStrategies
                    , DoAndIfThenElse
                    , EmptyDataDecls
                    , ExistentialQuantification
                    , FlexibleContexts
                    , FlexibleInstances
                    , FunctionalDependencies
                    , GADTs
                    , GeneralizedNewtypeDeriving
                    , InstanceSigs
                    , KindSignatures
                    , LambdaCase
                    , MultiParamTypeClasses
                    , MultiWayIf
                    , NamedFieldPuns
                    , OverloadedStrings
                    , PartialTypeSignatures
                    , PatternGuards
                    , PatternSynonyms
                    , PolyKinds
                    , RankNTypes
                    , RecordWildCards
                    , ScopedTypeVariables
                    , StandaloneDeriving
                    , TemplateHaskell
                    , TupleSections
                    , TypeFamilies
                    , TypeSynonymInstances
                    , ViewPatterns
