name:               logans-blog
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          main.hs
  hs-source-dirs:   site
  build-depends:    site-lib
                  , base == 4.*
  ghc-options:      -threaded
                    -rtsopts
                    -with-rtsopts=-N

library site-lib
  hs-source-dirs:   src
  exposed-modules:  Site
  other-modules:    Site.Common
                  , Site.Compiler
                  , Site.Compiler.CustomPandoc
                  , Site.Configuration
                  , Site.Context.Field
                  , Site.Context.Git
                  , Site.Context.Post
                  , Site.Context.Tag
                  , Site.Route
                  , Site.Rule
                  , Site.Rule.Archive
                  , Site.Rule.Blog
                  , Site.Rule.Feed
                  , Site.Rule.Index
                  , Site.Rule.Js
                  , Site.Rule.Page
                  , Site.Rule.Robot
                  , Site.Rule.Sass
                  , Site.Rule.Sitemap
                  , Site.Util
  build-depends:    base == 4.*
                  , hakyll == 4.14.*
                  , hjsmin == 0.2.*
                  , language-javascript == 0.7.*
                  , bytestring == 0.*
                  , process == 1.6.*
                  , filepath == 1.4.*
                  , directory == 1.3.*
                  , mtl == 2.2.*
                  , containers == 0.6.*
                  , pandoc == 2.11.*
                  , pandoc-types == 1.22.*
  ghc-options:      -Wall
                    -Wcompat
                    -Widentities
                    -Wincomplete-patterns
                    -Wincomplete-record-updates
                    -Wincomplete-uni-patterns
                    -Wmissing-deriving-strategies
                    -Wmissing-home-modules
                    -Wname-shadowing
                    -Wpartial-fields
                    -Wredundant-constraints
                    -Wunused-type-patterns
  default-language: Haskell2010
  default-extensions: BangPatterns
                    , BinaryLiterals
                    , BlockArguments
                    , ConstraintKinds
                    , DataKinds
                    , DefaultSignatures
                    , DeriveDataTypeable
                    , DeriveFoldable
                    , DeriveFunctor
                    , DeriveGeneric
                    , DeriveTraversable
                    , DerivingStrategies
                    , DoAndIfThenElse
                    , EmptyDataDecls
                    , ExistentialQuantification
                    , FlexibleContexts
                    , FlexibleInstances
                    , FunctionalDependencies
                    , GADTs
                    , GeneralizedNewtypeDeriving
                    , InstanceSigs
                    , KindSignatures
                    , LambdaCase
                    , MultiParamTypeClasses
                    , MultiWayIf
                    , NamedFieldPuns
                    , OverloadedStrings
                    , PartialTypeSignatures
                    , PatternGuards
                    , PatternSynonyms
                    , PolyKinds
                    , RankNTypes
                    , RecordWildCards
                    , ScopedTypeVariables
                    , StandaloneDeriving
                    , TemplateHaskell
                    , TupleSections
                    , TypeFamilies
                    , TypeSynonymInstances
                    , ViewPatterns
